--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
   <body>
     <!-- Header Area -->
     <header>
-      <div>
-        <div>
-          <h3>MUNIRIH NGANYADE ZOWE</h3>
-          <div>
-            <img height="250" width= "200" src="/assets/images/image-01.jpg" alt="profile picture"> 
+      
+      <div class="container">
+        <div id="profile">
+          <h3>MUNIRIH NGANYADE</h3>
+          <div >
+            <img height="210" width= "210" src="/assets/images/image-01.jpg" alt="profile picture"> 
           </div>    
         </div>
         <div id ="box">
@@ -31,7 +32,7 @@
             <p> LinkedIn: <a class="span-color" href="https://www.linkedin.com/in/munirih-nganyade-zowe-7a625840/">https://www.linkedin.com/in/munirih-nganyade-zowe-7a625840/</a></p>
         </div>
       </div>
-      <div>
+      <div id="summary">
         <h3> Summary </h3>
         <p> I am a full-stack Software Developer with hands-on experience in both front-end and back-end development. 
           Skilled in Python, Flask, and PostgreSQL, with a focus on building robust, scalable web applications. 
@@ -63,8 +64,8 @@
         <p><span class="span-color"> IT Service Manager Intern</span> | Tabi Corporation | Mar 2019 - June 2019</p>
         <ul>
           <li> Designed User Interfaces and Designed and implemented Workflows to automate business processes using Ivanti software platform</li>
-          <il> Wrote technical documentation</il>
-          <il> Generated Reporting using Business Intelligence Development Studio</il>
+          <li> Wrote technical documentation</li>
+          <li> Generated Reporting using Business Intelligence Development Studio</li>
         </ul>
       </div>
       <div>
