--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
       
       <div class="container">
         <div id="profile">
-          <h3>MUNIRIH NGANYADE</h3>
+          <h2>MUNIRIH NGANYADE</h2>
           <div >
-            <img height="210" width= "210" src="/assets/images/image-01.jpg" alt="profile picture"> 
+            <img height="210" width= "200" src="/assets/images/image-01.jpg" alt="profile picture"> 
           </div>    
         </div>
         <div id ="box">
@@ -33,7 +33,7 @@
         </div>
       </div>
       <div id="summary">
-        <h3> Summary </h3>
+        <h2> Summary </h2>
         <p> I am a full-stack Software Developer with hands-on experience in both front-end and back-end development. 
           Skilled in Python, Flask, and PostgreSQL, with a focus on building robust, scalable web applications. 
           I am comfortable working across the stack to deliver clean, efficient code and user-friendly solutions. 
@@ -44,14 +44,14 @@
     </header>
     <!-- Main Area -->
     <main>
-      <div>
-        <h3>Education</h3>
+      <div id="education">
+        <h2>Education</h2>
         <hr>
         <p> B. Sc in Informatics | 2014 - 2018</p>
         <p> <span class="span-color">University of South Africa</span> - South Africa</p>
       </div>
-      <div> 
-        <h3> Experience</h3>
+      <div id="experience"> 
+        <h2> Experience</h2>
         <hr>
         <p><span class="span-color">Software Developer</span> | Roger Layton Associates | 2019 - Current</p>
         <ul>
@@ -65,12 +65,11 @@
         <ul>
           <li> Designed User Interfaces and Designed and implemented Workflows to automate business processes using Ivanti software platform</li>
           <li> Wrote technical documentation</li>
-          <li> Generated Reporting using Business Intelligence Development Studio</li>
         </ul>
       </div>
-      <div>
-        <div>
-          <h3> Skills</h3>
+      <div class="skills-hobbies-container">
+        <div class="child">
+          <h2> Skills</h2>
           <hr>
           <ul>
             <li> SQL for Database management</li>
@@ -79,13 +78,13 @@
             <li> CI/CD tools: Git, Maven, Jenkins, Docker.</li>
           </ul>
         </div>
-        <div>
-          <h3> Hobbies</h3>
+        <div class="child">
+          <h2> Hobbies</h2>
           <hr>
           <ul>
             <li> Exploring tourists attractions</li>
             <li> Hiking trails</li>
-            <li> Daning</li>
+            <li> Dancing</li>
           </ul>
         </div>
       </div>
