--- a/index.html
+++ b/index.html
@@ -44,29 +44,31 @@
     </header>
     <!-- Main Area -->
     <main>
-      <div id="education">
-        <h2>Education</h2>
-        <hr>
-        <p> B. Sc in Informatics | 2014 - 2018</p>
-        <p> <span class="span-color">University of South Africa</span> - South Africa</p>
-      </div>
-      <div id="experience"> 
-        <h2> Experience</h2>
-        <hr>
-        <p><span class="span-color">Software Developer</span> | Roger Layton Associates | 2019 - Current</p>
-        <ul>
-          <li> Currently working on upgrading ETHER Inventory using python and flask, 
-            an inventory system designed to assist with the GRAP103 audits process 
-            of museums in South Africa. The existing system was built on ASP.NET framework. </li>
-          <li> Assisted with the development of OneMuseum, an aggregation portal 
-            for heritage institutions to publish their content as a unified and trusted sources. </li>
+      <div class="education-experience-container">
+        <div class="child">
+          <h2>Education</h2>
+          <hr>
+          <p> B. Sc in Informatics | 2014 - 2018</p>
+          <p> <span class="span-color">University of South Africa</span> - South Africa</p>
+        </div>
+        <div class="child"> 
+          <h2> Experience</h2>
+          <hr>
+          <p><span class="span-color">Software Developer</span> | Roger Layton Associates | 2019 - Current</p>
+          <ul>
+            <li> Currently working on upgrading ETHER Inventory using python and flask, 
+              an inventory system designed to assist with the GRAP103 audits process 
+              of museums in South Africa. The existing system was built on ASP.NET framework. </li>
+            <li> Assisted with the development of OneMuseum, an aggregation portal 
+              for heritage institutions to publish their content as a unified and trusted sources. </li>
+          </ul>
+          <p><span class="span-color"> IT Service Manager Intern</span> | Tabi Corporation | Mar 2019 - June 2019</p>
+          <ul>
+            <li> Designed User Interfaces and Designed and implemented Workflows to automate business processes using Ivanti software platform</li>
+            <li> Wrote technical documentation</li>
         </ul>
-        <p><span class="span-color"> IT Service Manager Intern</span> | Tabi Corporation | Mar 2019 - June 2019</p>
-        <ul>
-          <li> Designed User Interfaces and Designed and implemented Workflows to automate business processes using Ivanti software platform</li>
-          <li> Wrote technical documentation</li>
-        </ul>
       </div>
+    </div>
       <div class="skills-hobbies-container">
         <div class="child">
           <h2> Skills</h2>
