--- a/index.html
+++ b/index.html
@@ -23,20 +23,19 @@
         <div id="profile">
           <h2>MUNIRIH NGANYADE</h2>
           <div >
-            <img height="210" width= "200" src="/assets/images/image-01.jpg" alt="profile picture"> 
+            <img height="150" width= "150" src="/assets/images/image-01.jpg" alt="profile picture"> 
           </div>    
         </div>
         <div id ="box">
-            <p> email: <span class="span-color"> munirih.nganyade@gmail.com </span></p>
-            <p> phone: +27740352363</p>
-            <p> LinkedIn: <a class="span-color" href="https://www.linkedin.com/in/munirih-nganyade-zowe-7a625840/">https://www.linkedin.com/in/munirih-nganyade-zowe-7a625840/</a></p>
+            <p> Email: <span class="span-color"> munirih.nganyade@gmail.com </span></p>
+            <p> Phone: +27740352363</p>
+            <p> LinkedIn: <a class="span-color" href="https://www.linkedin.com/in/munirih-nganyade-zowe-7a625840/">https://www.linkedin.com/in/munirih-nganyade-zowe/</a></p>
         </div>
       </div>
       <div id="summary">
         <h2> Summary </h2>
-        <p> I am a full-stack Software Developer with hands-on experience in both front-end and back-end development. 
-          Skilled in Python, Flask, and PostgreSQL, with a focus on building robust, scalable web applications. 
-          I am comfortable working across the stack to deliver clean, efficient code and user-friendly solutions. 
+        <p> I am a Software Developer with hands-on experience in both front-end and back-end development. 
+          I have a passion for building robust, scalable web applications and I am comfortable working across the stack to deliver clean, efficient code and user-friendly solutions. 
           I am eager to contribute to dynamic teams and work on impactful projects. 
           
         </p>
@@ -87,6 +86,7 @@
             <li> Exploring tourists attractions</li>
             <li> Hiking trails</li>
             <li> Dancing</li>
+            <li> Trying new recipes</li>
           </ul>
         </div>
       </div>
